--- a/frontend/conuwalks/package.json
+++ b/frontend/conuwalks/package.json
@@ -43,6 +43,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1"
   },
@@ -56,6 +57,7 @@
     "eslint-config-expo": "~10.0.0",
     "jest": "29.7.0",
     "jest-expo": "^54.0.17",
+    "react-native-svg-transformer": "^1.5.3",
     "react-test-renderer": "19.1.0",
     "typescript": "~5.9.2"
   },
